Replace physical file paths with classpath resource loading